<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginFragment"
    android:padding="@dimen/main_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_layout_login_email"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/input_layout_login_password"
        android:hint="@string/input_login_email_hint"
        android:layout_marginBottom="@dimen/margin_between_elements">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_login_with_password"
        android:hint="@string/input_login_password_hint"
        android:layout_marginBottom="@dimen/margin_between_elements">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_with_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_default"
        app:layout_constraintBottom_toTopOf="@id/btn_login_register"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:text="@string/btn_login_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_register"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_default"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:text="@string/btn_login_register_text"
        android:textColor="#546E7A"
        app:layout_constraintBottom_toBottomOf="@id/divider_external_login"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_external_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_google_sign_in"
        android:layout_marginBottom="@dimen/margin_between_elements"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_default"
        app:layout_constraintBottom_toTopOf="@id/btn_facebook_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/margin_between_elements" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:paddingStart="@dimen/facebook_button_padding"
        android:paddingTop="@dimen/facebook_button_padding"
        android:paddingEnd="@dimen/facebook_button_padding"
        android:paddingBottom="@dimen/facebook_button_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>